패키지 추가 및 exe 패키징 예시